# synthegria-siem

./: .dockerignore  .gitignore  .replit  Dockerfile  README.md  example_client.py  fly.toml  landing.html  main.py  pyproject.toml  render.yaml  replit.md
.pytest_cache/v/cache/: nodeids
scripts/: push_to_github.py  start.sh  test_api.py  test_stripe_meter_events.py
sdk/javascript/: README.md  package.json  synthegria.d.ts  synthegria.js
sdk/python/: README.md  setup.py
sdk/python/synthegria/: __init__.py  client.py  exceptions.py
tests/: conftest.py  test_ai_analyst.py  test_anomaly.py  test_audit.py  test_auth.py  test_bulk.py  test_ingestion.py
utils/: ai_analyst.py  anomaly.py  auth.py
